a1/tests/reject/09.ul
void main() {
	int i;
	i;
	void v;
}
